# gapless-network-data

./: .env.example  .gitignore  .lychee-results.json  .lychee-results.txt  .lychee.toml  .releaserc.yml  BITCOIN_HISTORICAL_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  Earthfile  HISTORICAL_COLLECTION_STRATEGY.md  IMPLEMENTATION_STATUS.md  LICENSE  PATCH_1_blockchain_rpc_provider_research.md  PATCH_2_blockchain_data_collection_validation.md  PATCH_3_bigquery_ethereum_data_acquisition.md  PHASE_1_VERIFICATION_REPORT.md  PHASE_2A_VERIFICATION_REPORT.md  PHASE_2B_VERIFICATION_REPORT.md  PHASE_3_VERIFICATION_REPORT.md  README.md  REFACTOR_CHANGELOG.md  REFACTOR_COMPLIANCE_PLAN.md  REFACTOR_CONFORMANCE_REPORT.md  REFACTOR_EXECUTIVE_SUMMARY.md  REFACTOR_SSOT_README.md  llms.txt  package-lock.json  package.json  pyproject.toml  test_db_init.py
.claude/skills/: .lychee-results.json  .lychee-results.txt  CATALOG.md  README.md
.github/workflows/: release.yml
deployment/backfill/: .gcloudignore  Dockerfile  README.md  chunked_backfill.sh  historical_backfill.py  requirements.txt
deployment/cloud-run/: Dockerfile  Dockerfile.data-quality  README.md  data_quality_checker.py  main.py  requirements.txt
deployment/monitoring/: README.md  requirements.txt  setup_monitoring.py
deployment/oracle/: README.md  deploy.sh  keep_alive.sh  migrate_secrets.py  motherduck_monitor.py  provision.sh  provision_with_retry.sh
deployment/vm/: README.md  deploy.sh  eth-collector.service  realtime_collector.py
docs/: INDEX.md
docs/adr/: 2025-11-28-gap-collector-resilience.md  2025-11-29-motherduck-clickhouse-cleanup.md  2025-12-01-dotenv-credential-loading.md  2025-12-02-half-open-interval-timestamps.md  2025-12-02-pushover-notification-enhancement.md  2025-12-02-schema-first-data-contract.md  2025-12-02-sdk-user-feedback-v451.md  2025-12-03-adr-graph-easy-standardization.md  2025-12-03-alpha-features-doc-fixes.md  (+3 more)
examples/: basic_usage.py
scripts/: earthly-with-doppler.sh  lint-links.sh  publish-to-pypi.sh  verify-documentation-accuracy.sh  verify-refactor-slos.sh
specifications/: claude-md-updatedness-phase.yaml  cloud-local-alignment-phase.yaml  doc-normalization-phase.yaml  documentation-audit-phase.yaml  documentation-cleanup-phase.yaml  documentation-fix-phase.yaml  duckdb-integration-strategy.yaml  duckdb-schema-specification.yaml  master-project-roadmap.yaml  monitoring-fixes-phase.yaml  monitoring-skill-documentation-sync.yaml  monitoring-skill-enhancement-v2-findings.yaml  monitoring-skill-enhancement.yaml  motherduck-data-quality-monitoring.yaml  motherduck-integration.yaml  oracle-motherduck-monitoring.yaml  post-audit-rectification-phase.yaml  project-cleanup-phase.yaml  refactor-compliance-implementation.yaml  remaining-issues-resolution-phase.yaml  workspace-rectification-phase.yaml
tests/: test_api.py  test_exceptions.py  test_gap_detection.py
(+339 files in other folders)
