[project]
name = "gapless-network-data"
version = "4.5.1"
description = "Ethereum blockchain network metrics collection infrastructure with zero-gap guarantee (multi-chain support planned)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Terry Li", email = "terry@eonlabs.com"}
]
keywords = [
    "ethereum",
    "bitcoin",
    "blockchain",
    "network-metrics",
    "data-collection",
    "gas-prices",
    "mempool",
    "fee-estimation",
    "llamarpc",
    "multi-chain",
    "cryptocurrency"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.28.0",
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "web3>=7.0.0",
    "clickhouse-connect>=0.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/terrylica/gapless-network-data"
Documentation = "https://github.com/terrylica/gapless-network-data#readme"
Repository = "https://github.com/terrylica/gapless-network-data"
Issues = "https://github.com/terrylica/gapless-network-data/issues"

[project.scripts]
gapless-network-data = "gapless_network_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gapless_network_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=gapless_network_data",
    "--cov-report=term-missing",
    "--cov-report=json",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

